--- a/src/main/resources/db/changelog/001_init.yaml
+++ b/src/main/resources/db/changelog/001_init.yaml
@@ -1,37 +1,15 @@
 databaseChangeLog:
   - changeSet:
       id: 001-extensions-pgcrypto
-      author: you
+      author: assistant
       changes:
         - sql:
             sql: "CREATE EXTENSION IF NOT EXISTS pgcrypto;"
 
-#  # postgres enum
-#  - changeSet:
-#      id: 002-enums
-#      author: you
-#      changes:
-#        - sql:
-#            splitStatements: true
-#            endDelimiter: ";"
-#            sql: |
-#              DO $$
-#              BEGIN
-#                IF NOT EXISTS (SELECT 1 FROM pg_type WHERE typname = 'meeting_status') THEN
-#                  CREATE TYPE meeting_status AS ENUM ('SCHEDULED','CANCELLED');
-#                END IF;
-#                IF NOT EXISTS (SELECT 1 FROM pg_type WHERE typname = 'participant_role') THEN
-#                  CREATE TYPE participant_role AS ENUM ('ORGANIZER','ATTENDEE');
-#                END IF;
-#                IF NOT EXISTS (SELECT 1 FROM pg_type WHERE typname = 'participant_status') THEN
-#                  CREATE TYPE participant_status AS ENUM ('PENDING','ACCEPTED','DECLINED');
-#                END IF;
-#              END$$;
-
   # users
   - changeSet:
       id: 010-create-users
-      author: you
+      author: assistant
       changes:
         - createTable:
             tableName: users
@@ -64,10 +42,6 @@ databaseChangeLog:
                     nullable: false
 
               - column:
-                  name: bio
-                  type: text
-
-              - column:
                   name: telegram_nick
                   type: varchar(64)
 
@@ -93,18 +67,86 @@ databaseChangeLog:
                   constraints:
                     nullable: false
 
+  # roles
+  - changeSet:
+      id: 015-create-roles
+      author: assistant
+      changes:
+        - createTable:
+            tableName: roles
+            columns:
+              - column:
+                  name: id
+                  type: uuid
+                  defaultValueComputed: gen_random_uuid()
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+
+              - column:
+                  name: slug
+                  type: varchar(32)
+                  constraints:
+                    nullable: false
+                    unique: true
+
+              - column:
+                  name: name
+                  type: varchar(64)
+                  constraints:
+                    nullable: false
+
+  - changeSet:
+      id: 016-create-user-roles
+      author: assistant
+      changes:
+        - createTable:
+            tableName: user_roles
+            columns:
+              - column:
+                  name: user_id
+                  type: uuid
+                  constraints:
+                    nullable: false
+              - column:
+                  name: role_id
+                  type: uuid
+                  constraints:
+                    nullable: false
+
+        - addPrimaryKey:
+            tableName: user_roles
+            columnNames: user_id, role_id
+            constraintName: pk_user_roles
+
+        - addForeignKeyConstraint:
+            baseTableName: user_roles
+            baseColumnNames: user_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_user_roles_user
+            onDelete: CASCADE
+
+        - addForeignKeyConstraint:
+            baseTableName: user_roles
+            baseColumnNames: role_id
+            referencedTableName: roles
+            referencedColumnNames: id
+            constraintName: fk_user_roles_role
+            onDelete: CASCADE
+
   # rooms
   - changeSet:
       id: 020-create-rooms
-      author: you
+      author: assistant
       changes:
         - createTable:
             tableName: rooms
             columns:
               - column:
                   name: id
-                  type: bigint
-                  autoIncrement: true
+                  type: uuid
+                  defaultValueComputed: gen_random_uuid()
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -125,15 +167,15 @@ databaseChangeLog:
   # meetings
   - changeSet:
       id: 030-create-meetings
-      author: you
+      author: assistant
       changes:
         - createTable:
             tableName: meetings
             columns:
               - column:
                   name: id
-                  type: bigint
-                  autoIncrement: true
+                  type: uuid
+                  defaultValueComputed: gen_random_uuid()
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -175,7 +217,7 @@ databaseChangeLog:
 
               - column:
                   name: room_id
-                  type: bigint
+                  type: uuid
 
               - column:
                   name: status
@@ -211,43 +253,19 @@ databaseChangeLog:
             referencedTableName: rooms
             referencedColumnNames: id
             constraintName: fk_meetings_room
-
-        - addCheckConstraint:
-            tableName: meetings
-            constraintName: ck_meetings_start_hour
-            checkConstraint: "start_hour >= 0 AND start_hour <= 23"
-
-        - addCheckConstraint:
-            tableName: meetings
-            constraintName: ck_meetings_duration
-            checkConstraint: "duration_hours >= 1 AND duration_hours <= 24"
-
-        - createIndex:
-            tableName: meetings
-            indexName: ix_meetings_date_hour
-            columns:
-              - column: { name: meeting_date }
-              - column: { name: start_hour }
-
-        - createIndex:
-            tableName: meetings
-            indexName: ix_meetings_organizer_slot
-            columns:
-              - column: { name: organizer_id }
-              - column: { name: meeting_date }
-              - column: { name: start_hour }
+            onDelete: SET NULL
 
   # meeting_participants
   - changeSet:
       id: 040-create-meeting-participants
-      author: you
+      author: assistant
       changes:
         - createTable:
             tableName: meeting_participants
             columns:
               - column:
                   name: meeting_id
-                  type: bigint
+                  type: uuid
                   constraints:
                     nullable: false
 
@@ -305,6 +323,7 @@ databaseChangeLog:
             referencedTableName: meetings
             referencedColumnNames: id
             constraintName: fk_mp_meeting
+            onDelete: CASCADE
 
         - addForeignKeyConstraint:
             baseTableName: meeting_participants
@@ -312,23 +331,4 @@ databaseChangeLog:
             referencedTableName: users
             referencedColumnNames: id
             constraintName: fk_mp_user
-
-        - addCheckConstraint:
-            tableName: meeting_participants
-            constraintName: ck_mp_start_hour
-            checkConstraint: "start_hour >= 0 AND start_hour <= 23"
-
-        - createIndex:
-            tableName: meeting_participants
-            indexName: ix_mp_user_slot
-            columns:
-              - column: { name: user_id }
-              - column: { name: meeting_date }
-              - column: { name: start_hour }
-
-        - createIndex:
-            tableName: meeting_participants
-            indexName: ix_mp_meeting_status
-            columns:
-              - column: { name: meeting_id }
-              - column: { name: status }
+            onDelete: CASCADE
